--- a/styles.css
+++ b/styles.css
@@ -535,7 +535,7 @@ nav{
     font-weight: 700; 
     word-wrap: break-word
 }
-.bg3gr {
+.tod {
     width: 1925px;
     height: 579pxs;
     left: -25px;
