--- a/styles.css
+++ b/styles.css
@@ -540,7 +540,7 @@ nav{
     height: 579pxs;
     left: -25px;
     top: 2259px;
-    position: absolute;
+    position: relative;
     background: #595959;
 }
 .b3 {
